--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -13,6 +13,9 @@
             <trans-unit id="sys_file_metadata.placeholder">
                 <source>Placeholder</source>
             </trans-unit>
+            <trans-unit id="button.delete">
+                <source>Delete</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
