--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -13,6 +13,12 @@
             <trans-unit id="sys_file_metadata.placeholder">
                 <source>Platzhalter</source>
             </trans-unit>
+            <trans-unit id="button.delete">
+                <source>Löschen</source>
+            </trans-unit>
+            <trans-unit id="button.refresh">
+                <source>Neu laden</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
