feat: read queue in form element, display loading screen

--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -19,6 +19,9 @@
             <trans-unit id="button.refresh">
                 <source>Neu laden</source>
             </trans-unit>
+            <trans-unit id="button.abort">
+                <source>Abbrechen</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
