--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -19,6 +19,9 @@
             <trans-unit id="button.refresh">
                 <source>Request new</source>
             </trans-unit>
+            <trans-unit id="button.abort">
+                <source>Abort</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
